--- a/Frontend/easybank/package.json
+++ b/Frontend/easybank/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
     "chart.js": "^2.9.4",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
     "moment": "^2.29.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
