--- a/Server/package.json
+++ b/Server/package.json
@@ -21,6 +21,7 @@
     "jspdf-autotable": "^3.5.14",
     "mongoose": "^5.11.19",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
