--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.19",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
